# stm32aio

./: .gitignore  CMakeLists.txt
ld/: stm32f105rb_flash.ld
lib/CMSIS/Device/ST/STM32F10x/: Release_Notes.html
lib/CMSIS/Device/ST/STM32F10x/Source/Templates/: system_stm32f10x.c
lib/CMSIS/Device/ST/STM32F10x/Source/Templates/TrueSTUDIO/: startup_stm32f10x_cl.s  startup_stm32f10x_hd.s  startup_stm32f10x_hd_vl.s  startup_stm32f10x_ld.s  startup_stm32f10x_ld_vl.s  startup_stm32f10x_md.s  startup_stm32f10x_md_vl.s
lib/CMSIS/Device/ST/STM32F10x/Source/Templates/arm/: startup_stm32f10x_cl.s  startup_stm32f10x_hd_vl.s  startup_stm32f10x_ld.s  startup_stm32f10x_ld_vl.s  startup_stm32f10x_md_vl.s
lib/CMSIS/Device/ST/STM32F10x/Source/Templates/gcc_ride7/: startup_stm32f10x_cl.s  startup_stm32f10x_hd.s  startup_stm32f10x_hd_vl.s  startup_stm32f10x_ld.s  startup_stm32f10x_ld_vl.s  startup_stm32f10x_md.s  startup_stm32f10x_md_vl.s  startup_stm32f10x_xl.s
lib/CMSIS/Device/ST/STM32F10x/Source/Templates/iar/: startup_stm32f10x_cl.s  startup_stm32f10x_hd_vl.s  startup_stm32f10x_ld.s  startup_stm32f10x_ld_vl.s  startup_stm32f10x_md_vl.s
lib/STM32F10x_Speex_Lib/STM32/: config.h
lib/STM32F10x_Speex_Lib/STM32/include/speex/: speex_config_types.h
lib/STM32F10x_Speex_Lib/STM32/libspeex/: modes.c  quant_lsp.c
lib/STM32F10x_Speex_Lib/STM32/libspeex/arm/: filters_cortexM3.h  ltp_cortexM3.h  vq_cortexM3.h
lib/STM32F10x_Speex_Lib/STM32/libspeex/gcc/: filters_cortexM3.h  filters_cortexM3.s  ltp_cortexM3.h  ltp_cortexM3.s  vq_cortexm3.s
lib/STM32F10x_Speex_Lib/STM32/libspeex/iar/: filters_cortexM3.s  ltp_cortexM3.s  vq_cortexm3.s
lib/STM32F10x_Speex_Lib/include/speex/: speex.h
lib/STM32F10x_Speex_Lib/libspeex/: arch.h  modes_wb.c  os_support.h
lib/STM32_USB_Device_Library/Class/cdc/src/: usbd_cdc_core.c
lib/STM32_USB_Device_Library/Core/inc/: usbd_usr.h
lib/STM32_USB_OTG_Driver/src/: usb_core.c  usb_dcd.c
lib/helix/: Makefile
lib/pdm/: pdm_filter.h  pdm_filter.s
lib/webrtc_vad/spl/: spl_init.c
lib/webrtc_vad/vad/: vad_core.c  vad_core.h  vad_filterbank.c  webrtc_vad.c
src/: aio_server.c  aio_server.h  aioiface.h  arduino_wiring.c  arduino_wiring.h  audio_in.c  audio_in.h  audio_out.c  audio_out.h  bme280.c  bme280.h  esp8266_ctl.c  esp8266_ctl.h  espeva_stmboard.h  i2c.c  i2c.h  ir_send.c  ir_send.h  ir_send_int.h  main.c  ui_input.c  ui_input.h  usart.c  usart.h
src/common/: circular_buffer.c  circular_buffer.h  debug.h  mini-printf.c  tools.c  tools.h
src/stm32f/: sbrk.c  stm32f10x_conf.h  stm32f10x_it.c  stm32f10x_it.h  stm32x.h  system_stm32f10x.c
src/usbstorage/: diskio.h  sd_spi_stm32.c  usbd_desc.c  usbd_storage_msd.c
src/usbuart/: usb_bsp.c  usb_conf.h  usbd_cdc_vcp.c  usbd_cdc_vcp.h  usbd_conf.h  usbd_desc.c  usbd_desc.h  usbd_usr.c
